crates/aven-check/tests/fixtures/check/invalid/literal-match-unreachable-arm.av
status : @{"waiting", "running"} = "waiting"
result = status ?>
  "waiting" => 1
  "stopped" => 2
  "running" => 3
